# allocating_coupons

./: README.md  app.py  consumers.csv  main.py  merchants.csv  pyproject.toml
src/allocation/: crew.py  main.py
src/allocation/config/: agents.yaml  tasks.yaml
src/allocation/tools/: allocate_coupon_tool.py  readcsv_tool.py
