[project]
name = "allocation"
version = "0.1.0"
description = "allocation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
allocation = "allocation.main:run"
run_crew = "allocation.main:run"
train = "allocation.main:train"
replay = "allocation.main:replay"
test = "allocation.main:test"
run_with_trigger = "allocation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
